--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portafolio-jc",
   "version": "0.1.0",
-  "homepage": "https://jcriveros23.github.io/portafolio-jc",
+  "homepage": "https://jcriveros23.github.io/portafolio-jc/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
